--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
+    "@reduxjs/toolkit": "^2.6.1",
     "@types/react-lottie": "^1.2.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -25,6 +26,8 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-lottie": "^1.2.10",
+    "react-redux": "^9.2.0",
+    "redux-persist": "^6.0.0",
     "sonner": "^2.0.1",
     "swiper": "^11.2.5",
     "tailwind-merge": "^3.0.2",
